--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -8522,4 +8522,34 @@ textarea.form-control-lg {
 /* 方向性+2色彩(全黑+半透明度) */
 .bg-dark-gradient {
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+}
+
+.sidebar {
+  width: 280px;
+  margin-left: -280px;
+  transition: margin-left 0.25s;
+}
+
+.main {
+  width: 100%;
+}
+
+.sidebar-toggled .sidebar {
+  margin-left: 0;
+}
+
+@media (min-width: 992px) {
+  .sidebar {
+    margin-left: 0;
+    width: 280px;
+  }
+  .main {
+    width: calc(100vw - 280px);
+  }
+  .sidebar-toggled .sidebar {
+    margin-left: -280px;
+  }
+  .sidebar-toggled .main {
+    width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
