--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -27,29 +27,28 @@
 @import "../node_modules/bootstrap/scss/buttons";
 @import "./buttons_custom";  
 //選用
-// @import "../node_modules/bootstrap/scss/transitions";
-// @import "../node_modules/bootstrap/scss/dropdown";
-// @import "../node_modules/bootstrap/scss/button-group";
+@import "../node_modules/bootstrap/scss/transitions"; //沒開沒下拉
+@import "../node_modules/bootstrap/scss/dropdown";
+@import "../node_modules/bootstrap/scss/button-group";
 @import "../node_modules/bootstrap/scss/nav";
-// @import "../node_modules/bootstrap/scss/navbar";
-//曾關掉卡片 導致stretched-link延伸出錯
-@import "../node_modules/bootstrap/scss/card";
-// @import "../node_modules/bootstrap/scss/accordion";
-// @import "../node_modules/bootstrap/scss/breadcrumb";
-// @import "../node_modules/bootstrap/scss/pagination";
-// @import "../node_modules/bootstrap/scss/badge";
-// @import "../node_modules/bootstrap/scss/alert";
-// @import "../node_modules/bootstrap/scss/progress";
-// @import "../node_modules/bootstrap/scss/list-group";
-// @import "../node_modules/bootstrap/scss/close";
-// @import "../node_modules/bootstrap/scss/toasts";
-// @import "../node_modules/bootstrap/scss/modal";
-// @import "../node_modules/bootstrap/scss/tooltip";
-// @import "../node_modules/bootstrap/scss/popover";
-// @import "../node_modules/bootstrap/scss/carousel";
-// @import "../node_modules/bootstrap/scss/spinners";
-// @import "../node_modules/bootstrap/scss/offcanvas";
-// @import "../node_modules/bootstrap/scss/placeholders";
+@import "../node_modules/bootstrap/scss/navbar";
+@import "../node_modules/bootstrap/scss/card";//曾關掉卡片 導致stretched-link延伸出錯
+@import "../node_modules/bootstrap/scss/accordion";
+@import "../node_modules/bootstrap/scss/breadcrumb";
+@import "../node_modules/bootstrap/scss/pagination";
+@import "../node_modules/bootstrap/scss/badge";
+@import "../node_modules/bootstrap/scss/alert";
+@import "../node_modules/bootstrap/scss/progress";
+@import "../node_modules/bootstrap/scss/list-group";
+@import "../node_modules/bootstrap/scss/close";
+@import "../node_modules/bootstrap/scss/toasts";
+@import "../node_modules/bootstrap/scss/modal";
+@import "../node_modules/bootstrap/scss/tooltip";
+@import "../node_modules/bootstrap/scss/popover";
+@import "../node_modules/bootstrap/scss/carousel";
+@import "../node_modules/bootstrap/scss/spinners";
+@import "../node_modules/bootstrap/scss/offcanvas";
+@import "../node_modules/bootstrap/scss/placeholders";
 //常用
 // Helpers
 @import "../node_modules/bootstrap/scss/helpers";
