--- a/stylesheet/_variables.scss
+++ b/stylesheet/_variables.scss
@@ -304,7 +304,7 @@ $success:       yellowgreen !default;
 $info:          $cyan !default;
 $warning:       red !default;
 $danger:        $red !default;
-$light:         $white !default;
+$light:         $light !default;
 $dark:          $gray-900 !default;
 // scss-docs-end theme-color-variables
 
@@ -495,7 +495,7 @@ $border-color-translucent:    rgba($black, .175) !default;
 // scss-docs-start border-radius-variables
 $border-radius:               .375rem !default;
 $border-radius-sm:            .25rem !default;
-$border-radius-lg:            .5rem !default;
+$border-radius-lg:            .75rem !default;
 $border-radius-xl:            1rem !default;
 $border-radius-2xl:           2rem !default;
 $border-radius-pill:          50rem !default;
@@ -1238,7 +1238,7 @@ $card-spacer-x:                     $spacer !default;
 $card-title-spacer-y:               $spacer * .5 !default;
 $card-border-width:                 $border-width !default;
 $card-border-color:                 var(--#{$prefix}border-color-translucent) !default;
-$card-border-radius:                $border-radius !default;
+$card-border-radius:                $border-radius-lg !default;
 $card-box-shadow:                   null !default;
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
 $card-cap-padding-y:                $card-spacer-y * .5 !default;
