--- a/stylesheet/_variables.scss
+++ b/stylesheet/_variables.scss
@@ -304,7 +304,7 @@ $success:       yellowgreen !default;
 $info:          $cyan !default;
 $warning:       red !default;
 $danger:        $red !default;
-$light:         $light !default;
+$light:         rgb(231, 231, 249) !default;
 $dark:          $gray-900 !default;
 // scss-docs-end theme-color-variables
 
@@ -1471,14 +1471,14 @@ $list-group-color:                  $gray-900 !default;
 $list-group-bg:                     $white !default;
 $list-group-border-color:           rgba($black, .125) !default;
 $list-group-border-width:           $border-width !default;
-$list-group-border-radius:          $border-radius !default;
+$list-group-border-radius:          $border-radius-lg !default;
 
 $list-group-item-padding-y:         $spacer * .5 !default;
 $list-group-item-padding-x:         $spacer !default;
 $list-group-item-bg-scale:          -80% !default;
 $list-group-item-color-scale:       40% !default;
 
-$list-group-hover-bg:               $gray-100 !default;
+$list-group-hover-bg:               $blue-300 !default;
 $list-group-active-color:           $component-active-color !default;
 $list-group-active-bg:              $component-active-bg !default;
 $list-group-active-border-color:    $list-group-active-bg !default;
