--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -30,7 +30,7 @@
   --bs-info: #0dcaf0;
   --bs-warning: red;
   --bs-danger: #dc3545;
-  --bs-light: #fff;
+  --bs-light: rgb(231, 231, 249);
   --bs-dark: #212529;
   --bs-primary-rgb: 111, 66, 193;
   --bs-secondary-rgb: 217, 154, 231;
@@ -38,7 +38,7 @@
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 0, 0;
   --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 255, 255, 255;
+  --bs-light-rgb: 231, 231, 249;
   --bs-dark-rgb: 33, 37, 41;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
@@ -1894,13 +1894,13 @@ progress {
 
 .table-light {
   --bs-table-color: #000;
-  --bs-table-bg: #fff;
-  --bs-table-border-color: #e6e6e6;
-  --bs-table-striped-bg: #f2f2f2;
+  --bs-table-bg: rgb(231, 231, 249);
+  --bs-table-border-color: #d0d0e0;
+  --bs-table-striped-bg: #dbdbed;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e6e6e6;
+  --bs-table-active-bg: #d0d0e0;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #ececec;
+  --bs-table-hover-bg: #d6d6e6;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2994,19 +2994,19 @@ textarea.form-control-lg {
 
 .btn-light {
   --bs-btn-color: #000;
-  --bs-btn-bg: #fff;
-  --bs-btn-border-color: #fff;
+  --bs-btn-bg: rgb(231, 231, 249);
+  --bs-btn-border-color: rgb(231, 231, 249);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #d9d9d9;
-  --bs-btn-hover-border-color: #cccccc;
-  --bs-btn-focus-shadow-rgb: 217, 217, 217;
+  --bs-btn-hover-bg: #c4c4d4;
+  --bs-btn-hover-border-color: #b9b9c7;
+  --bs-btn-focus-shadow-rgb: 196, 196, 212;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #cccccc;
-  --bs-btn-active-border-color: #bfbfbf;
+  --bs-btn-active-bg: #b9b9c7;
+  --bs-btn-active-border-color: #adadbb;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #fff;
-  --bs-btn-disabled-border-color: #fff;
+  --bs-btn-disabled-bg: rgb(231, 231, 249);
+  --bs-btn-disabled-border-color: rgb(231, 231, 249);
 }
 
 .btn-dark {
@@ -3129,19 +3129,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-light {
-  --bs-btn-color: #fff;
-  --bs-btn-border-color: #fff;
+  --bs-btn-color: rgb(231, 231, 249);
+  --bs-btn-border-color: rgb(231, 231, 249);
   --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #fff;
-  --bs-btn-hover-border-color: #fff;
-  --bs-btn-focus-shadow-rgb: 255, 255, 255;
+  --bs-btn-hover-bg: rgb(231, 231, 249);
+  --bs-btn-hover-border-color: rgb(231, 231, 249);
+  --bs-btn-focus-shadow-rgb: 231, 231, 249;
   --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #fff;
-  --bs-btn-active-border-color: #fff;
+  --bs-btn-active-bg: rgb(231, 231, 249);
+  --bs-btn-active-border-color: rgb(231, 231, 249);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-color: rgb(231, 231, 249);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #fff;
+  --bs-btn-disabled-border-color: rgb(231, 231, 249);
   --bs-gradient: none;
 }
 
@@ -4794,12 +4794,12 @@ textarea.form-control-lg {
 }
 
 .alert-light {
-  --bs-alert-color: #666666;
-  --bs-alert-bg: white;
-  --bs-alert-border-color: white;
+  --bs-alert-color: #5c5c64;
+  --bs-alert-bg: #fafafe;
+  --bs-alert-border-color: #f8f8fd;
 }
 .alert-light .alert-link {
-  color: #525252;
+  color: #4a4a50;
 }
 
 .alert-dark {
@@ -4877,12 +4877,12 @@ textarea.form-control-lg {
   --bs-list-group-bg: #fff;
   --bs-list-group-border-color: rgba(0, 0, 0, 0.125);
   --bs-list-group-border-width: 1px;
-  --bs-list-group-border-radius: 0.375rem;
+  --bs-list-group-border-radius: 0.75rem;
   --bs-list-group-item-padding-x: 1rem;
   --bs-list-group-item-padding-y: 0.5rem;
   --bs-list-group-action-color: #495057;
   --bs-list-group-action-hover-color: #495057;
-  --bs-list-group-action-hover-bg: #f8f9fa;
+  --bs-list-group-action-hover-bg: #6ea8fe;
   --bs-list-group-action-active-color: #212529;
   --bs-list-group-action-active-bg: #e9ecef;
   --bs-list-group-disabled-color: #6c757d;
@@ -5196,17 +5196,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-light {
-  color: #666666;
-  background-color: white;
+  color: #5c5c64;
+  background-color: #fafafe;
 }
 .list-group-item-light.list-group-item-action:hover, .list-group-item-light.list-group-item-action:focus {
-  color: #666666;
-  background-color: #e6e6e6;
+  color: #5c5c64;
+  background-color: #e1e1e5;
 }
 .list-group-item-light.list-group-item-action.active {
   color: #fff;
-  background-color: #666666;
-  border-color: #666666;
+  background-color: #5c5c64;
+  border-color: #5c5c64;
 }
 
 .list-group-item-dark {
@@ -6814,7 +6814,7 @@ textarea.form-control-lg {
 
 .text-bg-light {
   color: #000 !important;
-  background-color: RGBA(255, 255, 255, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(231, 231, 249, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-dark {
@@ -6865,10 +6865,10 @@ textarea.form-control-lg {
 }
 
 .link-light {
-  color: #fff !important;
+  color: rgb(231, 231, 249) !important;
 }
 .link-light:hover, .link-light:focus {
-  color: white !important;
+  color: #ececfa !important;
 }
 
 .link-dark {
