--- a/stylesheet/components/_navbar.scss
+++ b/stylesheet/components/_navbar.scss
@@ -1,11 +1,11 @@
 @import "../utils/mix";
 @import "../helpers/variables";
 
-*{
-    font: normal normal 24px/39px Kalam;
+* {
+  font: normal normal 24px/39px Kalam;
 }
 
-.navbar{
+.navbar {
   .navbar-brand {
     @include hide_text;
     width: 50px;
@@ -14,8 +14,8 @@
     border-radius: 50%;
     background-color: #fff;
   }
-  h1{
-  font: normal normal bold 24px/39px Kalam;
+  h1 {
+    // font: normal normal bold 24px/39px Kalam;
   }
 }
 .nav-link {
@@ -36,7 +36,7 @@
     color: #f9c745;
   }
   .money_title {
-    color: $pick_black;
+    color: $pickBlack;
     font: normal normal bold 24px/39px Kalam;
   }
 }
@@ -45,5 +45,38 @@
   span {
     color: $nbaRed;
     font: normal normal bold 24px/39px Kalam;
+  }
+}
+
+.top_selling {
+  span {
+    color: $nbaRed;
+    font: normal normal bold 24px/39px Kalam;
+  }
+}
+.rank_card {
+  .img_back {
+    width: 100%;
+    height: 250px;
+    background-color: #fff;
+    border-radius: 10%;
+  }
+  .card-text {
+    white-space: nowrap; /*段落不自動換行*/
+    overflow: hidden; /*超過寬度隱藏*/
+    text-overflow: ellipsis; /*文字省略號*/
+    height: 80px;
+    -webkit-line-clamp: 2;
+    // display: -webkit-box;
+    -webkit-box-orient: vertical;
+  }
+  a::after {
+    content: "";
+    position: absolute;
+    top: 90%;
+    left: 10%;
+    background: $gray-500;
+    width: 80%;
+    height: 1px;
   }
 }
