--- a/stylesheet/helpers/_variables.scss
+++ b/stylesheet/helpers/_variables.scss
@@ -48,7 +48,7 @@ $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 $nbaBlue: #0253a5;
 $nbaRed:  #cc2b31;
-$pick_black: #3A3A3A;
+$pickBlack: #3A3A3A;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -309,6 +309,7 @@ $warning:       red !default;
 $danger:        $red !default;
 $light:         rgb(231, 231, 249) !default;
 $dark:          $gray-900 !default;
+$pickBlack:    $pickBlack;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -323,6 +324,7 @@ $theme-colors: (
   "dark":       $dark,
   "nbaBlue":    $nbaBlue,
   "nbaRed":     $nbaRed,
+  "pickBlack":  $pickBlack,
 ) !default;
 // scss-docs-end theme-colors-map
 
