--- a/stylesheet/components/_navbar.scss
+++ b/stylesheet/components/_navbar.scss
@@ -2,7 +2,7 @@
 @import "../helpers/variables";
 
 * {
-  font: normal normal  Kalam;
+  font: normal normal Kalam;
 }
 
 .navbar {
@@ -43,6 +43,28 @@
   }
 }
 
+.new_product_img {
+  width: 100%;
+  height: 250px;
+  position: absolute;
+  border-radius: 3%;
+  color: white;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  background-image: linear-gradient(180deg, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.8));
+  display: none;
+}
+.hover_img {
+  .new_product_img {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+}
+
 .top_selling {
   span {
     color: $nbaRed;
@@ -59,6 +81,11 @@
     height: 250px;
     background-color: #fff;
     border-radius: 10%;
+  }
+  .card-img-top:hover {
+    background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
+    width: 100%;
+    height: 250px;
   }
   .card-text {
     white-space: nowrap; /*段落不自動換行*/
@@ -78,11 +105,4 @@
     width: 80%;
     height: 1px;
   }
-}
-
-.custom_img_after:hover{
-  opacity: 100%;
-}
-.custom_img_befor:hover{
-  opacity: 100%;
 }
