--- a/stylesheet/helpers/_variables.scss
+++ b/stylesheet/helpers/_variables.scss
@@ -46,6 +46,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$white:   #fff;
 $nbaBlue: #0253a5;
 $nbaRed:  #cc2b31;
 $pickBlack: #3A3A3A;
@@ -1073,7 +1074,7 @@ $nav-link-padding-y:                .5rem !default;
 $nav-link-padding-x:                1rem !default;
 $nav-link-font-size:                null !default;
 $nav-link-font-weight:              null !default;
-$nav-link-color:                    white !default;
+$nav-link-color:                    $white !default;
 $nav-link-hover-color:              $nbaRed !default;
 $nav-link-transition:               color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out !default;
 $nav-link-disabled-color:           $gray-600 !default;
