--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -3836,7 +3836,7 @@ textarea.form-control-lg {
   --bs-nav-link-padding-x: 1rem;
   --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-font-weight: ;
-  --bs-nav-link-color: white;
+  --bs-nav-link-color: #fff;
   --bs-nav-link-hover-color: #cc2b31;
   --bs-nav-link-disabled-color: #6c757d;
   display: flex;
@@ -4416,6 +4416,27 @@ textarea.form-control-lg {
   font: normal normal bold 24px/39px Kalam;
 }
 
+.new_product_img {
+  width: 100%;
+  height: 250px;
+  position: absolute;
+  border-radius: 3%;
+  color: white;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  display: none;
+}
+
+.hover_img .new_product_img {
+  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
 .top_selling span {
   color: #cc2b31;
   font: normal normal bold 24px/39px Kalam;
@@ -4430,6 +4451,11 @@ textarea.form-control-lg {
   height: 250px;
   background-color: #fff;
   border-radius: 10%;
+}
+.rank_card .card-img-top:hover {
+  background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
+  width: 100%;
+  height: 250px;
 }
 .rank_card .card-text {
   white-space: nowrap; /*段落不自動換行*/
@@ -4447,14 +4473,6 @@ textarea.form-control-lg {
   background: #adb5bd;
   width: 80%;
   height: 1px;
-}
-
-.custom_img_after:hover {
-  opacity: 100%;
-}
-
-.custom_img_befor:hover {
-  opacity: 100%;
 }
 
 .card {
