--- a/stylesheet/helpers/_utilities.scss
+++ b/stylesheet/helpers/_utilities.scss
@@ -762,6 +762,7 @@ $utilities: map-merge(
       class: bgp,
       values: (
         center: center center,
+        bottom:center bottom,
       ),
     ),
     "background-attachment": (
