--- a/stylesheet/components/_navbar.scss
+++ b/stylesheet/components/_navbar.scss
@@ -15,7 +15,36 @@
     background-color: #fff;
   }
   h1 {
-    // font: normal normal 24px/39px Kalam;
+    color: $white;
+    &:hover {
+      color: $nbaRed;
+    }
+  }
+  .navbar-nav a {
+    color: $white;
+    font-weight: bold;
+    &:hover {
+      color: $nbaRed;
+    }
+  }
+  /* Grow Shadow */
+  .hvr-grow-shadow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+  }
+  .hvr-grow-shadow:hover,
+  .hvr-grow-shadow:focus,
+  .hvr-grow-shadow:active {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
   }
 }
 
@@ -76,16 +105,33 @@
 }
 
 .rank_card {
+  .card:hover{
+   box-shadow: 0 50px 50px -10px rgba(0, 0, 0, 0.5);
+  }
   .img_back {
     width: 100%;
     height: 250px;
     background-color: #fff;
-    border-radius: 10%;
+    border-radius: 5%;
   }
-  .card-img-top:hover {
+  .hover_img.img_back001 {
     background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
-    width: 100%;
-    height: 250px;
+    background-position: center center;
+    background-size: cover;
+  }
+  .hover_img.img_back002 {
+    background-image: url(../../nbaWeb/PNG-images-NBA-Players-3png.png);
+    background-position: center center;
+    background-size: none;
+    background-repeat: no-repeat;
+  }
+  .hover_img.img_back003 {
+    background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
+    background-position: center center;
+    background-size: cover;
+  }
+  .hover_img.card-img-top {
+    display: none;
   }
   .card-text {
     white-space: nowrap; /*段落不自動換行*/
