--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -16,18 +16,17 @@
 @import "../node_modules/bootstrap/scss/root";
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
-//常用
+//內建常用
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/tables";
 @import "../node_modules/bootstrap/scss/forms";
-
 //舉例 關掉就沒有按鈕樣式 (相反 引入原始再變動
 @import "../node_modules/bootstrap/scss/buttons";
 @import "./components/buttons_custom";  
-//選用
+//內建選用
 @import "../node_modules/bootstrap/scss/transitions"; //沒開沒下拉
 @import "../node_modules/bootstrap/scss/dropdown";
 @import "../node_modules/bootstrap/scss/button-group";
@@ -50,15 +49,16 @@
 @import "../node_modules/bootstrap/scss/spinners";
 @import "../node_modules/bootstrap/scss/offcanvas";
 @import "../node_modules/bootstrap/scss/placeholders";
-//常用
+//內建常用
 // Helpers
 @import "../node_modules/bootstrap/scss/helpers";
 // Utilities
 @import "../node_modules/bootstrap/scss/utilities/api";
 
-//component
+//老師自訂component
 
 
-//pages
+//學生pages
 @import "./pages/home";
 @import "./pages/allstar";
+@import "./pages/newproduct";
