--- a/stylesheet/pages/_home.scss
+++ b/stylesheet/pages/_home.scss
@@ -1,9 +1,9 @@
 @import "../utils/mix";
 @import "../helpers/variables";
-@import url('https://fonts.googleapis.com/css?family=Rubik:700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 
 * {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 .navbar {
@@ -55,6 +55,9 @@
   height: 400px;
 }
 
+.money_img {
+  max-width: 548px;
+}
 .money {
   .money_service {
     font: normal normal bold 24px/39px Kalam;
@@ -106,8 +109,8 @@
 }
 
 .rank_card {
-  .card:hover{
-   box-shadow: 0 50px 50px -10px rgba(0, 0, 0, 0.5);
+  .card:hover {
+    box-shadow: 0 50px 50px -10px rgba(0, 0, 0, 0.5);
   }
   .img_back {
     width: 100%;
@@ -181,10 +184,11 @@ button {
     border: 2px solid $pink-border;
     border-radius: 0.75em;
     transform-style: preserve-3d;
-    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
+    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+      background 150ms cubic-bezier(0, 0, 0.58, 1);
     &::before {
       position: absolute;
-      content: '';
+      content: "";
       width: 100%;
       height: 100%;
       top: 0;
@@ -195,7 +199,8 @@ button {
       border-radius: inherit;
       box-shadow: 0 0 0 2px $pink-border, 0 0.625em 0 0 $pink-shadow;
       transform: translate3d(0, 0.75em, -1em);
-      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+        box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
     }
     &:hover {
       background: $pink;
