調整通用類別：首頁

--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -1,7 +1,7 @@
 
 ////以下是BS官方的引入順序
 /// 
-// 先引入函式 再改的變動檔 (只有變數這樣 其他像按鈕)
+// 先引入函式 再改的變動檔 (只有變數這樣 其他像按鈕那樣引入)
 @import "../node_modules/bootstrap/scss/functions";
 // 變動檔跟原始檔 引入其一即可
 @import "./helpers/variables"; 
