修正：產品的側欄和圖片 hover

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -12234,8 +12234,9 @@ textarea.form-control-lg {
   font-weight: bold;
 }
 
-.rank_card .card:hover {
-  box-shadow: 0 50px 50px -10px rgba(0, 0, 0, 0.5);
+.rank_card .card-img-top:hover .sell_more a {
+  font-weight: bold;
+  color: #cc2b31;
 }
 .rank_card .img_back {
   width: 100%;
@@ -12457,8 +12458,8 @@ button.learn-more:active::before {
 }
 .allstar_bg {
   background-image: url(../../nbaWeb/CGCJtcwUoAAQX8_.jpg);
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   background-position: center center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -12572,15 +12573,19 @@ button.learn-more:active::before {
 .aside a {
   color: #3A3A3A;
 }
+.aside a:active {
+  color: #0253a5;
+}
 .aside a:hover {
   color: #0253a5;
 }
-.aside a::after {
-  content: "";
-  background-color: #000;
-  top: 50%;
-  height: 1px;
-  width: 50px;
+.aside a span {
+  color: #0253a5;
+  font-weight: bold;
+  display: none;
+}
+.aside a:hover span {
+  display: inline-block;
 }
 
 @media (min-width: 768px) {
