完成：球星列表

--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -59,5 +59,6 @@
 //學生pages
 @import "./pages/home";
 @import "./pages/allstar";
+@import "./pages/allstarList";
 @import "./pages/newproduct";
 @import "./pages/customzied";
