--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -60,5 +60,6 @@
 @import "./pages/home";
 @import "./pages/allstar";
 @import "./pages/allstarList";
+@import "./pages/allstarListItem";
 @import "./pages/newproduct";
 @import "./pages/customzied";
