--- a/stylesheet/pages/_allstarListItem.scss
+++ b/stylesheet/pages/_allstarListItem.scss
@@ -13,6 +13,10 @@
   height: 424px;
 }
 
+.btnRwd {
+  width: 90%;
+  // width: inherit;
+}
 @include pc() {
   .imgRwd {
     left: 30%;
@@ -21,8 +25,6 @@
     font-size: 32px;
   }
   .btnRwd {
-    width: 90%;
-    // width: inherit;
     a {
       font-size: 48px;
     }
