修正：btn_Rwd 並填加入mixin

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13306,6 +13306,11 @@ textarea.form-control-lg {
   height: 1px;
 }
 
+@media (max-width: 1040px) {
+  .sellbtn_Rwd {
+    width: 100%;
+  }
+}
 button {
   position: relative;
   display: inline-block;
