--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -155,6 +155,12 @@
     height: 1px;
   }
 }
+@include sellbtn_Rwd;
+// @include pc() {
+//   .sellbtn_Rwd {
+//     width: 100%;
+//   }
+// }
 
 //3D按鈕
 $bg: #fff;
