--- a/stylesheets/utils/_mix.scss
+++ b/stylesheets/utils/_mix.scss
@@ -14,4 +14,15 @@
   box-shadow: -1px 1px #dddd;
   /* 0x 3y 3px擴散 */
   box-shadow: 0 3px 3px #dddd;
+  // box-shadow: x-位移 y-位移 blur-模糊的值(實心1~10) spread-擴散的值(範圍1-5) color-顏色(第四個透明度) inset-是否在內側(染色感)
+  box-shadow: 0 10px 1px rgba(0, 0, 0, 0.6);
+}
+
+// 大 按鈕正常 小 按鈕放大100%
+@mixin sellbtn_Rwd() {
+  @include pc() {
+    .sellbtn_Rwd {
+      width: 100%;
+    }
+  }
 }
