--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5967,8 +5967,8 @@ textarea.form-control-lg {
   --bs-tooltip-padding-y: 0.25rem;
   --bs-tooltip-margin: ;
   --bs-tooltip-font-size: 0.875rem;
-  --bs-tooltip-color: #fff;
-  --bs-tooltip-bg: #000;
+  --bs-tooltip-color: #000;
+  --bs-tooltip-bg: #fff;
   --bs-tooltip-border-radius: 0.375rem;
   --bs-tooltip-opacity: 0.9;
   --bs-tooltip-arrow-width: 0.8rem;
@@ -13255,23 +13255,26 @@ textarea.form-control-lg {
   font-weight: bold;
 }
 
-.rank_card .card-img-top:hover .sell_more a {
+.rank_card :hover ~ .sell_more a {
   font-weight: bold;
   color: #cc2b31;
 }
-.rank_card .card-img-top:hover .card {
-  box-shadow: 0 3px 3px rgba(221, 221, 221, 0.8666666667);
+.rank_card :hover ~ .card {
+  box-shadow: 0 20px 20px rgba(221, 221, 221, 0.8666666667);
+}
+.rank_card :hover ~ .img_back001 {
+  background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
+  background-position: center center;
+  background-size: cover;
+}
+.rank_card :hover ~ .card-img-top {
+  display: none;
 }
 .rank_card .img_back {
   width: 100%;
   height: 250px;
   background-color: #fff;
   border-radius: 5%;
-}
-.rank_card .hover_img.img_back001 {
-  background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
-  background-position: center center;
-  background-size: cover;
 }
 .rank_card .hover_img.img_back002 {
   background-image: url(../../nbaWeb/PNG-images-NBA-Players-3png.png);
@@ -13283,9 +13286,6 @@ textarea.form-control-lg {
   background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
   background-position: center center;
   background-size: cover;
-}
-.rank_card .hover_img.card-img-top {
-  display: none;
 }
 .rank_card .card-text {
   white-space: nowrap; /*段落不自動換行*/
