--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -57,7 +57,7 @@
 //老師自訂component
 
 //學生pages
-@import "./pages/home";
+@import "./pages/index";
 @import "./pages/allstar";
 @import "./pages/allstarList";
 @import "./pages/allstarListItem";
