--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13204,6 +13204,9 @@ textarea.form-control-lg {
   box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
   transform: scale(1.1);
 }
+.navbar :active {
+  color: #cc2b31;
+}
 
 .banner {
   background-image: url(../../nbaWeb/john-villablanca-_7EXgSQ98ew-unsplash.jpg);
@@ -13237,15 +13240,12 @@ textarea.form-control-lg {
   border-radius: 3%;
   color: white;
   padding-left: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
   display: none;
 }
 
-.hover_img .new_product_img {
-  display: block;
+.card-img:hover ~ .new_product_img {
+  display: block !important;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -13592,126 +13592,24 @@ a {
     font-size: 48px;
   }
 }
-* {
-  font-family: "Rubik", sans-serif;
-}
-
-button {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  border: 0;
-  vertical-align: middle;
-  text-decoration: none;
-  font-size: inherit;
-  font-family: inherit;
-}
-button.learn-more {
-  font-weight: 600;
-  color: #382b22;
-  text-transform: uppercase;
-  padding: 1.25em 2em;
-  background: #fff0f0;
-  border: 2px solid none;
-  border-radius: 0.75em;
-  transform-style: preserve-3d;
-  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-}
-button.learn-more::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #000;
-  border-radius: inherit;
-  box-shadow: 0 0 0 2px none, 0 0.625em 0 0 #000;
-  transform: translate3d(0, 0.75em, -1em);
-  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-}
-button.learn-more:hover {
-  background: #ffe9e9;
-  transform: translate(0, 0.25em);
-}
-button.learn-more:hover::before {
-  box-shadow: 0 0 0 2px none, 0 0.5em 0 0 #000;
-  transform: translate3d(0, 0.5em, -1em);
-}
-button.learn-more:active {
-  background: #ffe9e9;
-  transform: translate(0em, 0.75em);
-}
-button.learn-more:active::before {
-  box-shadow: 0 0 0 2px none, 0 0 #000;
-  transform: translate3d(0, 0, -1em);
-}
-
-.navbar {
-  /* Grow Shadow */
-}
-.navbar .navbar-brand {
-  /* 圖片裝入容器 */
-  background-image: url(../../nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  /* 圖片取代文字 */
-  display: block;
-  text-indent: 101%;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 50px;
-  height: 50px;
-  border: 2px black solid;
-  border-radius: 50%;
-  background-color: #fff;
-}
-.navbar h1, .navbar .h1 {
-  color: #fff;
-}
-.navbar h1:hover, .navbar .h1:hover {
-  color: #cc2b31;
-}
-.navbar .navbar-nav a {
-  color: #fff;
-  font-weight: bold;
-}
-.navbar .navbar-nav a:hover {
-  color: #cc2b31;
-}
-.navbar .hvr-grow-shadow {
-  display: inline-block;
-  vertical-align: middle;
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  transition-duration: 0.3s;
-  transition-property: box-shadow, transform;
-}
-.navbar .hvr-grow-shadow:hover,
-.navbar .hvr-grow-shadow:focus,
-.navbar .hvr-grow-shadow:active {
-  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-  transform: scale(1.1);
-}
-
 .aside a {
   color: #3a3a3a;
 }
 .aside a:active {
-  color: #0253a5;
+  color: #0253a5 !important;
+}
+.aside a:active .aside_span {
+  display: inline-block !important;
 }
 .aside a:hover {
   color: #0253a5;
 }
-.aside a span {
+.aside a .aside_span {
   color: #0253a5;
   font-weight: bold;
   display: none;
 }
-.aside a:hover span {
+.aside a:hover .aside_span {
   display: inline-block;
 }
 
